--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
 
 
 
-    <title>React App</title>
+    <title>Grocery List</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
